--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "eventsource": "^1.0.7",
     "lodash": "^4.17.11",
     "randombytes": "^2.1.0",
-    "stellar-base": "^2.1.4",
+    "stellar-base": "rajababu3/js-stellar-base#v2.1.5",
     "toml": "^2.3.0",
     "tslib": "^1.10.0",
     "urijs": "^1.19.1",
